# StyxLoaderX-Injection-Research

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  run_project.bat
.github/workflows/: build.yml
docs/: Whitepaper.md  config_lab.md  research_hooks.md  test_report.md
docs/detections/: README.md  sigma-process-hollowing.yml  sigma-remote-thread-injection.yml  sysmon-config-delta.md
include/styxloader/: direct_syscall.hpp  hollow_injector.hpp  sandbox_check.hpp  shellcode.hpp  simple_injector.hpp  string_obfuscator.hpp
modules/: DirectSyscall.cpp  HollowInjector.cpp  IndirectSyscall.cpp  SandboxCheck.cpp  StringObfuscator.h
modules/asm/: styx_syscalls.asm
shellcode/: shellcode.asm
src/: MainLoader.cpp  SimpleInjector.cpp  direct_syscall.cpp  hollow_injector.cpp  sandbox_check.cpp  shellcode.cpp  simple_injector.cpp  string_obfuscator.cpp
tools/: main_loader.cpp  simple_injector_tool.cpp
